# house-price-assistant

./: .env.example  .gitignore  README.md  pyproject.toml
app/: __init__.py  config.py  main.py
app/api/: dashboard.py  events.py  listings.py  tasks.py
app/crawler/: __init__.py  base.py  parser.py  registry.py  xingfuli.py
app/scheduler/: __init__.py  jobs.py
app/schemas/: __init__.py  dashboard.py  events.py  listings.py  tasks.py
app/services/: crawl_service.py  listing_matcher.py  price_tracker.py  status_detector.py
app/storage/: database.py  models.py  repositories.py
app/web/: __init__.py  routes.py
app/web/templates/: dashboard.html  listings.html  task_edit.html  tasks.html
tools/: crawl_probe.py
