[project]
name = "house-price-assistant"
version = "0.1.0"
description = "MVP for tracking public second-hand house listings and price changes."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "apscheduler>=3.10",
  "beautifulsoup4>=4.12",
  "fastapi>=0.111",
  "httpx>=0.27",
  "jinja2>=3.1",
  "sqlalchemy>=2.0",
  "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["data*", "docs*", "migrations*", "tests*", "tools*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
